--- a/src/scss/pageIndex/_md.scss
+++ b/src/scss/pageIndex/_md.scss
@@ -1049,7 +1049,7 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                margin: auto;
+                margin:20px auto;
                 vertical-align: middle;
 
                 a {
@@ -1076,7 +1076,7 @@
                 .login {
                     background-color: $grey;
                     position: absolute;
-                    top: 0;
+                    top: 0px;
                     left: 0;
                     right: 0;
                     margin:100px auto;
