--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -96,7 +96,7 @@
 	background-size: cover;
 	background-position: bottom center;
 	.a-down{
-
+		
 		i{
 			margin: 20px;
 			color:$blue-green;
@@ -104,6 +104,25 @@
 		}
 	}
 }
+#a-star{
+		width: 450px;
+		margin:auto;	
+		margin-top: 80px;
+		margin-left: -90px;
+		/*background-color: #fff;		*/
+		stroke-dashoffset: 3000;
+		stroke-dasharray: 3000;
+		animation: circle 10s linear both;
+		/*z-index: 10;*/
+		height: 40vh;
+	}
+
+	@keyframes circle{
+		100%{
+			stroke-dashoffset:0;
+		}
+		
+	}
 .a-searchInput{
 	display:block;
 	position: relative;
@@ -143,7 +162,7 @@
 .a-btn{
 	margin-top: 20px;
 	.btn-lg{
-		margin: 20px  30px 0px 30px;
+		margin: 20px  10px 0px 10px;
 	}
 }
 // #a-panel-date{
@@ -363,7 +382,7 @@
 	}
 	.a-phone-icon{
 		position: absolute;
-				  top: 25px;
+				  top: 72px;
 				  left: 20px;
 				  margin: auto;
 		width: 30px;
