--- a/src/scss/pageActivity/pageMain/_lg.scss
+++ b/src/scss/pageActivity/pageMain/_lg.scss
@@ -18,17 +18,17 @@
 .a-panel-control{
 	width: 510px;
 }
+
 .a-controls{
-	background-color: rgba(0,0,0,0.3);
 	width: 95%;
-	// box-sizing:border-box;
-	height: 95%;
+	height: 100%;
 	overflow: hidden;
 	margin: auto;
-	border:0.5px solid #fff;
-	padding: 20px 20px 10px 20px;
-	margin-top: 20px;
+	border:0.5px solid rgba(255,255,255,.3);
+	padding: 20px;
+	background-color: rgba(93,162,220,.2);
 }
+
 .a-phone-control{
 	display: none;
 }
