--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,4 @@
 @import "pagePhoto/pagePhoto";
 @import "pageKnowledge/pageKnowledge";
 @import "pageMember/pageMember";
+@import "pageActivity-1/activity-1";
