--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -848,11 +848,11 @@
 				display: inline-block;
 				vertical-align: middle;
 				// border: 1px solid red;
-				text-align: center;
+				// text-align: center;
 				float: left;
 
 				.user-pic{
-					width: 100%;
+					width: 60%;
 
 					img{
 						width: 100%;
