--- a/src/scss/pageActivity/pageMain/_lg.scss
+++ b/src/scss/pageActivity/pageMain/_lg.scss
@@ -9,28 +9,28 @@
 		
 		}
 	}
-.a-panel-item{
-	input{
-		width: 200px;
+// .a-panel-item{
+// 	input{
+// 		width: 200px;
 
-	}
-}
-.a-panel-control{
-	width: 510px;
-}
+// 	}
+// }
+// .a-panel-control{
+// 	width: 510px;
+// }
 
-.a-controls{
-	width: 95%;
-	height: 100%;
-	overflow: hidden;
-	margin: auto;
-	border:0.5px solid rgba(255,255,255,.3);
-	padding: 20px;
-	background-color: rgba(93,162,220,.2);
-}
+// .a-controls{
+// 	width: 95%;
+// 	height: 100%;
+// 	overflow: hidden;
+// 	margin: auto;
+// 	border:0.5px solid rgba(255,255,255,.3);
+// 	padding: 20px;
+// 	background-color: rgba(93,162,220,.2);
+// }
 
-.a-phone-control{
-	display: none;
-}
+// .a-phone-control{
+// 	display: none;
+// }
 
 }//lg結束
