--- a/src/scss/pageActivity-1/_activity-1.scss
+++ b/src/scss/pageActivity-1/_activity-1.scss
@@ -26,9 +26,11 @@
 			height: 100%;
 			z-index: 999;
 			text-align: center;
-			background: url(../img/a_010.jpg);
+			// background: url(../img/a_010.jpg);
+			background: url(../img/new-003.jpg);
 			background-size: cover;
-			background-position: bottom center;
+			// background-position: bottom center;
+			background-position: top center;
 			.a-down{
 
 				.fa-angle-double-down{
@@ -48,15 +50,68 @@
 
 
 	// 篩選單開始
+	.a-panel-top{
+		.aa-desc{
+			padding-top: 20px;
+			padding-bottom: 30px;
+			letter-spacing: 0.08em;
+			color: #fff;
 
-	.a-panel-date{
-		#a-date-control{
-			height: 38px;
-			padding: 6px;
-			border-radius:4px;
-			border: 1px solid silver;
-			font-size: 14px;
-			letter-spacing:0.05em;
+			h3{
+				font-size: 22px;
+				font-style: italic;
+				color: rgba(255,255,255,.6);
+			}
+
+			ul{
+				padding-left: 30px;
+				// border: 1px solid #fff;
+
+				
+				li{
+					font-size: 18px;
+					// display: block;
+					line-height: 1.5em;
+					margin-right: 30px;
+					// color: #DCAE26;
+					// border: 1px solid #fff;
+					padding: 5px;
+					
+
+
+					span{
+						font-weight: 800;
+						color: #DCAE26;
+
+					}
+				}
+			}
+
+		}
+	
+
+		.a-panel-date{
+			width: 90%;
+			margin: auto;
+			#a-date-control{
+				height: 30px;
+				padding: 6px;
+				border-radius:4px;
+				border: 1px solid silver;
+				font-size: 14px;
+				letter-spacing:0.05em;
+				font-weight: 800;
+				color: #86d4f5;
+			}
+		}
+
+		.aa-search-area{
+			padding-bottom: 10px;
+			padding-top: 20px;
+			// background-color: #000;
+			width: 100%;
+			border-top: 1px solid rgba(255,255,255,.6);
+			margin-bottom: 30px;
 		}
 	}
 
@@ -70,38 +125,53 @@
 	.a-map{
 		padding-top: 100px;
 		// margin-left: 20px;
+		
+
 
 		.a-panel{
-			// padding:0px 20px;
+			padding:0px 20px;
 
 			margin-top: 0vh;
 			overflow-y:auto;
 			height: 100vh; 
 			padding: 10px;
-			border:0.5px solid rgba(255,255,255,.3);
+			// border:0.5px solid rgba(255,255,255,.3);
 			// background-color: rgba(255,255,255,.2);
+			// background: url(../img/forum/f_003.jpg);
+			background-size: cover;
+			background-position: top right;
+			// filter:opacity(.8);
+			
+
+
 
 			ul a:first-child{
-				background-color: transparent;
-				border: 2px solid #DCAE26;
+				background-color: #86d4f5;
+				// border: 2px solid #DCAE26;
+
 
 				li{
-					color: #DCAE26;
+					// color:#86d4f5;
 				}
 				
 			}
 
 			ul a:hover{
-				border: 2px solid #DCAE26;
-				color:#DCAE26;
-				background-color: #transparent;
+			// 	border: 2px solid #DCAE26;
+				background-color:#86d4f5;
+			// 	background-color: #transparent;
 			}
 
 			.a-panel-top{
 				.a-text{
+					color: rgba(255,255,255,.7);
+					text-shadow:1px 1px 3px #000;
+					font-size: 20px;
+					margin-bottom: 20px;
+					// text-decoration: underline;
 					.fa{
 						margin-right: 5px;
-						font-size: 18px;
+						font-size: 20px;
 						// border: 1px solid #fff;
 						width: 20px;
 						height: 20px;
@@ -118,7 +188,26 @@
 	// }
 
 	.a-panel-item{
-		margin-top: 20px;
+		text-align: center;
+
+		// height: 200px;
+		// border: 1px solid rgba(255,255,255,.5);
+		// margin-right: 5px;
+
+		.aa-test{
+			width: 100%;
+			margin: auto;
+			height: 100%;
+			padding-bottom: 10px;
+			background-color: rgba(0,0,0,.6);
+			border: 1px solid rgba(255,255,255,.3);
+			box-shadow: 2px 2px 10px rgba(255,255,255,.7);
+		}
+
+		.aa-test1{
+			padding-bottom: 52px;
+		}
+
 
 		ul{
 			display: inline-block;
@@ -129,6 +218,7 @@
 				border-radius:3px;
 				text-shadow:1px 1px 1px #000;
 				font-size: 16px;
+				margin-bottom: 10px;
 
 			}
 		}
@@ -162,22 +252,29 @@
 	}
 
 	.a-phone-search{
+		text-align: center;
 		#a-phone-input_1{
-			padding-left: 35px;
+			// padding-left: 35px;
 			font-size: 14px;
 			font-weight: 800;
+			width: 100%;
 			
 		}
 
 		.a-phone-input{
-			padding-left: 35px;
+			// padding-left: 35px;
 			font-size: 14px;
 			color: #333;
 		}
 
 		.a-phone-icon-2{
-			left: -20px;
+			top: 35px;
+			left: -35px;
 			color: #767676;
+		}
+		.a-phone-icon{
+			top: 15px;
+			left: 75px;
 		}
 
 		.fa-chevron-up{
@@ -193,6 +290,7 @@
 		height: auto;
 		padding-bottom: 200px;
 		text-align: center;
+		// padding-left: 15px;
 
 		#aa-more{
 			
@@ -255,6 +353,8 @@
 
 				.aa-date{
 					color: #aaa;
+
+
 				}
 
 				.aa-desc{
@@ -287,18 +387,21 @@
 					.aa-btn{
 						width: 50%;
 						float: left;
-						background-color: transparent;
+						background-color: #86d4f5;
+						border: 0px solid #fff;
+						text-shadow:1px 1px 1px #000;
 						a{
 							font-size: 16px;
-							color: #4183c4;
+							// color: #4183c4;
 							font-weight: 900;
 						}
 
 						&:hover{
-							background-color: #4183c4;
+							background-color: transparent;
+							border: 1px solid #86d4f5;
 
 							a{
-								color: #fff;
+								color: #86d4f5;
 							}
 						}
 					}
@@ -349,6 +452,13 @@
 		}
 	}
 
+	.a-panel input{
+		width: 95%;
+		text-align: center;
+		margin-top: 10px;
+		border: 1px solid #86d4f5;
+	}
+
 
 
 }
@@ -356,11 +466,16 @@
 
 @include respones(xs) {
 	#a1-body{
+		#section1{
+			.a-banner{
+				background-position: top left;
+			}
+		}
 		#a1-star{
 			height: 60vh;
-		    transform: scale(0.7);
-		    margin-top: 40px;
-		    margin-bottom: 55px;
+		    transform: scale(0.6);
+		    margin-top: 10px;
+		    margin-bottom: 35px;
 		}
 
 		.a-title{
@@ -406,6 +521,8 @@
 			.a-panel{
 				padding: 0px;
 				border: 0px solid #000;
+				
+
 			}
 		}
 
