--- a/src/scss/pageKnowledge/_pageKnowledge.scss
+++ b/src/scss/pageKnowledge/_pageKnowledge.scss
@@ -4,6 +4,7 @@
 		color: #fff;
 		width: 100%;
 		font-size: 16px;
+		padding-bottom: 100px;
 
 
 		.kn_posts{
@@ -95,13 +96,22 @@
 	}
 
 	.kn_one_post{
-		background-color: rgba(51, 51, 51, .5);
+		// background-color: rgba(51, 51, 51, .5);
 		color: $white;
 		letter-spacing: 0.2em;
 		// margin-bottom: 100px;
 		padding-bottom: 150px;
-		padding-top: 150px;
+		padding-top: 10px;
 		width: 100%;
+
+		.mfp-close{
+			color: #fff;
+			position: absolute;
+			top: 100px;
+			// right: -50px;
+			font-weight: 800;
+			font-size: 32px;
+		}
 
 		.content{
 			padding: 30px;
